[project]
name = "cli-task-tracker"
version = "0.1.0"
description = "A simple CLI task tracker"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2",
]

[project.scripts]
tasker = "cli_task_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"